# stutter

./: .gitignore  CMakeLists.txt  README.md  SPEC.md
.github/workflows/: build.yml
docs/: ISSUES.md  ISSUES_TRIAGE.md  SPEC.md
src/: FactoryPresets.cpp  FactoryPresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
src/dsp/: CaptureBuffer.h  CurveModulator.h  LaneEffect.h  ParameterIDs.h  ParameterLayout.cpp  ParameterLayout.h  StepSequencer.h
src/dsp/effects/: CrushEffect.h  FilterEffect.h  GateEffect.h  RepitchEffect.h  ReverseEffect.h  StutterEffect.h  TapeStartEffect.h  TapeStopEffect.h
src/ui/: BottomTabs.cpp  BottomTabs.h  CurveEditor.cpp  CurveEditor.h  HeaderBar.cpp  HeaderBar.h  LaneParamPanel.cpp  LaneParamPanel.h  StepGrid.cpp  StepGrid.h  StutterLookAndFeel.cpp  StutterLookAndFeel.h
tools/render_test/: CMakeLists.txt  render_test.cpp
